# mini-text2sql

./: .dockerignore  .gitignore  LICENSE  README.md  docker-compose.yml  flask_text2sql.Dockerfile  notes.txt  pyproject.toml
src/: app.py  configs.yaml  demo.sh
src/crud/: crud_service.py
src/mini_text2sql.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/templates/: edit_form.html  index.html  table_page.html
src/templates/components/: data-display.html  tables-list.html
src/text2sql/: Text2Sql.py  langchain_text2sql.ipynb  text2sql_service.py
